--- a/src/main/resources/reports/employeeReport.jrxml
+++ b/src/main/resources/reports/employeeReport.jrxml
@@ -10,11 +10,10 @@
     </parameter> -->
     <!-- <parameter name="minSalary" class="java.lang.Double" isForPrompting="false"/> -->
     <queryString>
-        <![CDATA[]]>
-        <!-- <![CDATA[SELECT * FROM EMPLOYEE WHERE salary >= $P{minSalary} AND $P!{condition}]]> -->
+        <![CDATA[SELECT * FROM EMPLOYEE ]]>
     </queryString>
-    <field name="firstName" class="java.lang.String"/>
-    <field name="lastName" class="java.lang.String"/>
+    <field name="first_name" class="java.lang.String"/>
+    <field name="last_name" class="java.lang.String"/>
     <field name="salary" class="java.lang.Double"/>
     <field name="id" class="java.lang.Integer"/>
     <title>
@@ -31,12 +30,12 @@
             <textField>
                 <reportElement x="0" y="0" width="100" height="20"/>
                 <textElement/>
-                <textFieldExpression class="java.lang.String"><![CDATA[$F{firstName}]]></textFieldExpression>
+                <textFieldExpression class="java.lang.String"><![CDATA[$F{first_name}]]></textFieldExpression>
             </textField>
             <textField>
                 <reportElement x="100" y="0" width="100" height="20"/>
                 <textElement/>
-                <textFieldExpression class="java.lang.String"><![CDATA[$F{lastName}]]></textFieldExpression>
+                <textFieldExpression class="java.lang.String"><![CDATA[$F{last_name}]]></textFieldExpression>
             </textField>
             <textField>
                 <reportElement x="200" y="0" width="100" height="20"/>
